# zoom-bak

./: .gitignore  README.md  config.yaml  docker-compose.yml  logging_config.py  main.py  pyproject.toml  retry_failed_downloads.py
database/: __init__.py  inventory.py  metadata.py  setup.py
utils/: __init__.py  api.py  file.py  misc.py
zoom_api/: __init__.py  auth.py  discovery.py  download.py  user.py
