[project]
name = "zoom-bak"
version = "0.1.0"
description = "Python application for Zoom backups"
authors = [
    {name = "Franz Rebaza", email = "contact@franzrebaza.com"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "psycopg2-binary>=2.9.10",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.0",
    "requests>=2.32.4",
]
